# rpi-eink-dashboard

./: .gitignore  README.md  dashboard.py  main.py  pyproject.toml
assets/: weather.json.template
display/: interface.py
modules/: _config.py  library_busyness.py  weather.py
pull/: README.md  main.py  pyproject.toml
pull/assets/: pulse.template.json  weather.template.json
pull/display/: epd3in52.py  epdconfig.py  interface.py
pull/modules/: _fonts.py  pulse.py  weather.py
push/: README.md  main.py  pyproject.toml
push/display/: interface.py
