[project]
name = "push"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "gpiozero>=2.0.1",
    "gunicorn>=23.0.0",
    "lgpio>=0.2.2.0",
    "pillow>=11.3.0",
    "rpi-gpio>=0.7.1",
    "spidev>=3.7",
]
